<resources>
    <string name="app_name">AgileStudent</string>
    <string name="pleaseLogin">Please log in:</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Agile Student!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="newStory">New Story</string>
    <string name="createStory">Create Story</string>
    <string name="editStory">Edit Story</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="purpose">Purpose</string>
    <string name="duration">Duration</string>
    <string name="back">Back</string>
    <string name="completeStory">Complete Story</string>
    <string name="deleteStory">Delete Story</string>
    <string name="pullStory">Pull To Current Sprint</string>
    <string name="undoComplete">Undo Complete</string>
    <string name="highFive">High Five!</string>
    <string name="currentSprint">Current Sprint:</string>
    <string name="currentSprintReport">Current Sprint Report</string>
    <string name="lastSprintReport">Last Sprint Report</string>
    <string name="completedStoriesReport">Completed Stories</string>
    <string name="stats">Achievements</string>
    <string name="completionist1Desc">Completionist I: Complete 1 Story</string>
    <string name="completionist2Desc">Completionist II: Complete 10 Stories</string>
    <string name="completionist3Desc">Completionist III: Complete 100 Stories</string>
    <string name="completionist4Desc">Completionist IV: Complete 1000 Stories</string>
    <string name="completionist5Desc">Completionist V: Complete 10000 Stories</string>
    <string name="completionist1">Completionist I</string>
    <string name="completionist2">Completionist II</string>
    <string name="completionist3">Completionist III</string>
    <string name="completionist4">Completionist IV</string>
    <string name="completionist5">Completionist V</string>
    <string name="sprinter1Desc">Sprinter I: Complete Your First Sprint</string>
    <string name="sprinter2Desc">Sprinter II: Complete 10 Sprints</string>
    <string name="sprinter3Desc">Sprinter III: Complete 30 Sprints</string>
    <string name="sprinter4Desc">Sprinter IV: Complete A Year Of Sprints</string>
    <string name="sprinter5Desc">Sprinter V: Complete 250 Sprints</string>
    <string name="sprinter1">Sprinter I</string>
    <string name="sprinter2">Sprinter II</string>
    <string name="sprinter3">Sprinter III</string>
    <string name="sprinter4">Sprinter IV</string>
    <string name="sprinter5">Sprinter V</string>
    <string name="perseverance1Desc">Perseverance I: Complete a 30 Minute Story</string>
    <string name="perseverance2Desc">Perseverance II: Complete a 60 Minute Story</string>
    <string name="perseverance3Desc">Perseverance III: Complete a 120 Minute Story</string>
    <string name="perseverance4Desc">Perseverance IV: Complete a 240 Minute Story</string>
    <string name="perseverance5Desc">Perseverance V: Complete a 600 Minute Story</string>
    <string name="perseverance1">Perseverance I</string>
    <string name="perseverance2">Perseverance II</string>
    <string name="perseverance3">Perseverance III</string>
    <string name="perseverance4">Perseverance IV</string>
    <string name="perseverance5">Perseverance V</string>
    <string name="completionist">Completionist: Complete Stories</string>
    <string name="sprinter">Sprinter: Complete Sprints</string>
    <string name="perseverance">Perseverance: Complete Long Stories</string>
</resources>